# slam-navigation-benchmark

./: .gitignore  README.md  REPOSITORY_STRUCTURE.md
docs/: README.md
docs/notion_done/: 01_hands_on_operation_on_turtlebot3.md  02_mobile_robot_control_optimization_usage_guide.md  03_rosbag_recording_standard_for_trajectory_evaluation.md  04_offline_algorithm_evaluation_trajectory_export_evo_and_performance.md  05_navigation_usage_guide_for_the_four_algorithms.md  06_four_algorithm_navigation_evaluation_automatic_waypoints.md  07_lego_loam_and_rs_lidar_docker_operational_guide.md  README.md
docs/reports/: README.md
docs/waypoints/: README.md  nav_waypoints_0324.yaml
ws_livox/src/fyp_utils/: CMakeLists.txt  package.xml
ws_livox/src/fyp_utils/docs/: graduation_report_draft_20260405.md  nav_waypoints_example.yaml  notion_01_rosbag_recording.md  notion_02_navigation_usage.md  notion_03_static_rosbag_eval.md  notion_04_rosbag_recording_for_trajectory_eval.md  notion_05_nav_eval_4alg_waypoints.md  nus_fyp_report_english_20260405.bib  nus_fyp_report_english_20260405.md  nus_fyp_report_english_20260405.tex  worklog_2026-03-18.txt
ws_livox/src/fyp_utils/docs/report_assets/: ppt_full_review.txt
ws_livox/src/fyp_utils/launch/: record_dataset.launch
ws_livox/src/fyp_utils/scripts/: bag_to_tum.py  capture_waypoints.py  cmd_vel_smoother.py  eval_nav_4alg.sh  eval_static_rosbag.sh  nav_waypoint_eval.py  remote_deploy_fyp_utils.sh  run_slam_nav.sh  slam_eval_monitor.py  summarize_nav_eval.py  summarize_static_eval.py
ws_livox/src/mid360_navigation/: CMakeLists.txt  (+2 more)
(+59 files in other folders)
