<?xml version="1.0"?>
<package format="2">
  <name>fyp_utils</name>
  <version>0.0.1</version>
  <description>Utilities for FYP vehicle data collection and control smoothing.</description>

  <maintainer email="bingda@example.com">bingda</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export/>
</package>
